# tic80-rust-port

./: .gitignore
rust/: Cargo.toml  SDL2.lib
rust/src/: api.rs  cart.rs  core.rs  desktop.rs  draw.rs  draw_dep.rs  extras.rs  font.rs  io.rs  json.rs  lib.rs  main.rs  parse_note.rs  script.rs  sound.rs  studio.rs  system.rs  tic.rs  tilesheet.rs  tools.rs  zip.rs
src/: fftdata.rs
src/core/: draw_dep.c
src/ext/: history.rs  kiss_fft.rs  kiss_fftr.rs  md5.rs
src/system/baremetalpi/: stdlib_app.h
src/system/n3ds/: main.c
src/system/sdl/: kbdlabels.inl  kbdlayout.inl
